Revise README for clarity and updated instructions
Updated architecture overview and instructions for data placement and environment setup.